<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.setting.SettingFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="16dp"
        android:background="?attr/colorOnPrimary"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/setting" />

    <TextView
        android:id="@+id/text_bahasa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/bahasa"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_baseline_language_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:drawablePadding="16dp"
        android:text="@string/logout"
        android:gravity="center_vertical"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/text_bahasa"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/ic_baseline_exit_to_app_24" />

</androidx.constraintlayout.widget.ConstraintLayout>