<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.addstory.AddStoryFragment">

    <ImageView
        android:id="@+id/img_upload"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#E3E3E3"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_pilih_gambar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pilih_gambar"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toTopOf="@id/img_upload"
        app:layout_constraintStart_toStartOf="@id/img_upload"
        app:layout_constraintEnd_toEndOf="@id/img_upload"
        app:layout_constraintBottom_toBottomOf="@id/img_upload"
        app:drawableTopCompat="@drawable/ic_baseline_add_a_photo_24" />

    <EditText
        android:id="@+id/et_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/text_tulis_keterangan"
        app:layout_constraintTop_toBottomOf="@+id/img_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>